<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_black"
        />
    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera"
        android:icon="@drawable/ic_camera_black"/>

    <item
        android:id="@+id/menu_charge"
        android:title="@string/menu_charge"
        android:icon="@drawable/ic_charge_black"/>

    <item
        android:id="@+id/menu_value"
        android:title="Values"
        android:icon="@drawable/ic_value_black"/>

    <item
        android:id="@+id/menu_option"
        android:title="@string/menu_option"
        android:icon="@drawable/ic_option_black"/>

</menu>