<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    >

    <Button
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_up"
        android:layout_toEndOf="@+id/button_up"
        android:layout_toRightOf="@+id/button_up"
        android:text="@string/button_right" />

    <Button
        android:id="@+id/button_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/button_up" />

    <include
        android:id="@+id/navigation"
        layout="@layout/element_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_up"
        android:layout_alignStart="@+id/button_up"
        android:layout_below="@+id/button_right"
        android:text="@string/button_down" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_up"
        android:layout_toLeftOf="@+id/button_down"
        android:layout_toStartOf="@+id/button_down"
        android:text="@string/button_left" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_up"
        android:layout_toEndOf="@+id/button_left"
        android:layout_toRightOf="@+id/button_left"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/button_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_right"
        android:layout_alignLeft="@+id/button_left"
        android:layout_alignRight="@+id/button_right"
        android:layout_alignStart="@+id/button_left"
        android:layout_below="@+id/button_down"
        android:text="@string/menu_charge" />

</RelativeLayout>
